--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     // SPRING REST DOC
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
