featureL: 사용자 수정 기능 추가

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,6 +13,9 @@ spring:
         format_sql: true
         default_batch_fetch_size: 100
     generate-ddl: true
+  h2:
+    console:
+      enabled: true
   config:
     activate:
       on-profile: local
